map alignment fixed, added jumbo tron as header

--- a/style.css
+++ b/style.css
@@ -1,11 +1,30 @@
 .searchForm {
-    position: absolute;
+    font-weight: bold;
 }
-.weatherForm {
-    position: absolute;
-    left: 75%;
-}
+
 .map {
-    position: absolute;
-    top: 47%;
+    border-radius: 20px 20px 20px 20px;
+    margin: .25em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height:35em;
+}
+.top {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    text-shadow: black 2px 2px 2px;
+    background-color: gray;
+    color: whitesmoke;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    font-size: 40px;
+}
+body {
+    background-image: url("images/lukas-blazek-f-TWhXOrLiU-unsplash.jpg");
+    height: auto; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
